# game_tetris

./: CMakeLists.txt  README.md  board.cpp  board.hpp  my_array.tpp  mycurses.cpp  mycurses.h  pieces.cpp  scraps.tpp  tetris.cpp  tetris.h
